--- a/state/templates/state/gov/parliament.html
+++ b/state/templates/state/gov/parliament.html
@@ -1,61 +1,73 @@
 {% load static %}
-
-<!--для каждой парламентской партии из списка-->
-{% for parl_party in parties %}
-<div class="row">
-    <!--Получить её имя-->
-    <font size="5"><b>
-        <!--если у партии есть аватарка-->
-        {% if parl_party.party.image %}
-        <img src="{{ parl_party.party.image.url }}" width="30" height="30">
-        {% else %}
-        <img src="{% static 'img/nopic_party.png' %}" width="30" height="30">
-        {% endif %}
-        {{ parl_party.party.title }}, {{ parl_party.seats }}% мест:
-    </b></font>
-</div>
-{% for deputate in deputates %}
-{% if deputate.party.pk == parl_party.party.pk %}
-<div class="row flex">
-    <div class="col-xs-2 col-sm-2 col-md-2">
-        {% if deputate.player %}
-            <a href='profile/{{ deputate.player.pk }}' target="_blank">
-                <!--если пользователь загрузил аватарку-->
-                {% if deputate.player.image %}
-                <img src="{{ deputate.player.image.url }}" width="80" height="80" align="right">
+{% load dict_key %}
+<div id="parliament" class="tab-pane fade in active">
+    <div class="progress" align="right">
+        {% for parl_party in parties %}
+        <div class="progress-bar bg-success" role="progressbar" style="width: {{ parl_party.seats }}%; color:black; background-color:#{{ party_colors|dict_key:parl_party }}!important"
+                             data-toggle="tooltip" data-placement="top" title="{{ parl_party.party }}: {{ parl_party.seats }}%">
+            {{ parl_party.party }}
+        </div>
+        {% endfor %}
+    </div>
+    <div id="parliament_list" style=" height: 640px; overflow-y: auto; overflow-x: hidden;">
+        <!--для каждой парламентской партии из списка-->
+        {% for parl_party in parties %}
+        <div class="row">
+            <!--Получить её имя-->
+            <font size="5"><b>
+                <!--если у партии есть аватарка-->
+                {% if parl_party.party.image %}
+                <img src="{{ parl_party.party.image.url }}" width="30" height="30">
                 {% else %}
-                <img src="{% static 'img/nopic.png' %}" width="80" height="80"
-                     align="right">
+                <img src="{% static 'img/nopic_party.png' %}" width="30" height="30">
                 {% endif %}
-            </a>
-        {% else %}
-            {% if parl_party.party.deleted %}
-            <img src="{% static 'cross.png' %}" width="80" height="80"
-                     align="right">
+                {{ parl_party.party.title }}, {{ parl_party.seats }}% мест:
+            </b></font>
+        </div>
+        {% for deputate in deputates %}
+        {% if deputate.party.pk == parl_party.party.pk %}
+        <div class="row flex">
+            <div class="col-xs-2 col-sm-2 col-md-2">
+                {% if deputate.player %}
+                    <a href='profile/{{ deputate.player.pk }}' target="_blank">
+                        <!--если пользователь загрузил аватарку-->
+                        {% if deputate.player.image %}
+                        <img src="{{ deputate.player.image.url }}" width="80" height="80" align="right">
+                        {% else %}
+                        <img src="{% static 'img/nopic.png' %}" width="80" height="80"
+                             align="right">
+                        {% endif %}
+                    </a>
+                {% else %}
+                    {% if parl_party.party.deleted %}
+                    <img src="{% static 'cross.png' %}" width="80" height="80"
+                             align="right">
+                    {% else %}
+                    <img src="{% static 'plus.png' %}" width="80" height="80"
+                         {% if player.party %}{% if player.party_post.party_lead %}onclick="window.location.href = '/set_mandate_view/'" style="cursor: pointer" {% endif %}{% endif %}
+                             align="right">
+                    {% endif %}
+                {% endif %}
+            </div>
+            <div class="col-xs-5 col-sm-5 col-md-5">
+            {% if deputate.player %}
+                <a href='profile/{{ deputate.player.pk }}' style="text-decoration: none;" target="_blank">
+                    <h3><b>{{ deputate.player.nickname }}</b></h3>
+                </a>
             {% else %}
-            <img src="{% static 'plus.png' %}" width="80" height="80"
-                 {% if player.party %}{% if player.party_post.party_lead %}onclick="window.location.href = '/set_mandate_view/'" style="cursor: pointer" {% endif %}{% endif %}
-                     align="right">
+                <h3><b>свободно</b></h3>
             {% endif %}
+            </div>
+            {% if deputate %}
+            <div class="col-xs-5 col-sm-5 col-md-5">
+            {% if deputate.party.pk == parl_party.party.pk %}
+                <h3><b>{{ deputate.player.party_post.title }}</b></h3>
+            {% endif %}
+            </div>
+            {% endif %}
+        </div>
         {% endif %}
+        {% endfor %}
+        {% endfor %}
     </div>
-    <div class="col-xs-5 col-sm-5 col-md-5">
-    {% if deputate.player %}
-        <a href='profile/{{ deputate.player.pk }}' style="text-decoration: none;" target="_blank">
-            <h3><b>{{ deputate.player.nickname }}</b></h3>
-        </a>
-    {% else %}
-        <h3><b>свободно</b></h3>
-    {% endif %}
-    </div>
-    {% if deputate %}
-    <div class="col-xs-5 col-sm-5 col-md-5">
-    {% if deputate.party.pk == parl_party.party.pk %}
-        <h3><b>{{ deputate.player.party_post.title }}</b></h3>
-    {% endif %}
-    </div>
-    {% endif %}
 </div>
-{% endif %}
-{% endfor %}
-{% endfor %}
